--- a/at_vue/package.json
+++ b/at_vue/package.json
@@ -4,28 +4,35 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@babel/core": "^7.19.6",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
+    "firebase": "^9.17.1",
     "pdfvuer": "^2.0.1",
     "plotly": "^1.0.6",
     "plotly.js": "^2.16.1",
     "plotly.js-dist": "^2.16.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3",
+    "vue-router": "^4.0.13",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@vitejs/plugin-vue": "^4.0.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/test-utils": "^2.2.10",
+    "jsdom": "^21.1.0",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "vitest": "^0.28.3"
   }
 }
